--- a/ContactUs/contact.html
+++ b/ContactUs/contact.html
@@ -4,3 +4,8 @@
   <title>Contact</title>
   <link rel = "stylesheet" href = "style.css" />
 </head>
+
+
+<<body>
+  <<p>This is a test for contact page</p>
+</body>
