--- a/ContactUs/contact.html
+++ b/ContactUs/contact.html
@@ -1,4 +1,6 @@
 <!-- This is reserved for the Contact Us page, a form for name, email, phone, and concern  - SM-->
+<!DOCTYPE html>
+<html>
 
 <head>
   <title>Contact</title>
