--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
   </nav>
     <!-- end of side bar -->
 
-    <li style="text-align:Center"><a href="contact.html">Contact Us</a></li>
+    <li style="text-align:Center"><a href="contact.js">Contact Us</a></li>
 
   </body>
 </html>
