--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     -->
 
 
-    <!-- Sidebar -->
+    <!-- Sidebar 
       <nav class="navbar">
     <ul class="navbar-nav">
       <li class="logo">
@@ -192,7 +192,7 @@
       </li>
     </ul>
   </nav>
-    <!-- end of side bar -->
+    end of side bar -->
 
   <!--  <li style="text-align:Center"><a href="contact.js">Contact Us</a></li>   -->
 
