--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,14 @@
 
     <title>Books and More</title>
   </head>
+  
+  <style>
+    div {
+      background-image: url('book-background.jpg');
+    }
+  </style>
+  
+  
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
