--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,11 @@
     <title>Books and More</title>
   </head>
   
-  
+   <style>
+body {
+  background-color: white;
+}
+</style>
   
   
   <body>
