Revert "Update index.html"
This reverts commit 5ad5a1f5f3fad6efa74b29df629f1ad8e4ad2a9b.

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     -->
 
 
-    <!-- Sidebar 
+    <!-- Sidebar -->
       <nav class="navbar">
     <ul class="navbar-nav">
       <li class="logo">
@@ -196,7 +196,7 @@
       </li>
     </ul>
   </nav>
-    end of side bar -->
+    <!-- end of side bar -->
 
   <!--  <li style="text-align:Center"><a href="contact.js">Contact Us</a></li>   -->
 
