--- a/public/index.html
+++ b/public/index.html
@@ -35,16 +35,11 @@
 
     <title>Books and More</title>
   </head>
-<<<<<<< HEAD
-<<<<<<< HEAD
-  
-  
-  
-  
-=======
->>>>>>> parent of dd05ac2... Update index.html
-=======
->>>>>>> parent of dd05ac2... Update index.html
+  <style>
+    div {
+      background-image: url('white.jpg');
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
