--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
     rel="stylesheet"
   />
 
-    <title>Books and More</title>
+    <title>books and more</title>
   </head>
   <style>
-   
+
     background-image: url('white.jpg');
-   
+
   </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
